// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line plot constants should plot horizontal line 1`] = `
<div
  style="width: 300px; height: 300px;"
>
  <svg
    class="baseSVG"
    height="100%"
    preserveAspectRatio="xMinYMin meet"
    viewBox="0 0 1000 700"
    width="100%"
  >
    <g
      class="canvas"
    >
      <rect
        class="graphArea"
        fill="#fff"
        fill-opacity="1"
        height="700"
        rx="0"
        ry="0"
        stroke="#00c"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
        width="1000"
      />
    </g>
    <g
      class="grids"
    >
      <g
        class="hor-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="470"
          y2="470"
        />
        <line
          x1="20"
          x2="980"
          y1="220"
          y2="220"
        />
      </g>
      <g
        class="hor-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="670"
          y2="670"
        />
        <line
          x1="20"
          x2="980"
          y1="620"
          y2="620"
        />
        <line
          x1="20"
          x2="980"
          y1="570"
          y2="570"
        />
        <line
          x1="20"
          x2="980"
          y1="520"
          y2="520"
        />
        <line
          x1="20"
          x2="980"
          y1="470"
          y2="470"
        />
        <line
          x1="20"
          x2="980"
          y1="420"
          y2="420"
        />
        <line
          x1="20"
          x2="980"
          y1="370"
          y2="370"
        />
        <line
          x1="20"
          x2="980"
          y1="320"
          y2="320"
        />
        <line
          x1="20"
          x2="980"
          y1="270"
          y2="270"
        />
        <line
          x1="20"
          x2="980"
          y1="220"
          y2="220"
        />
        <line
          x1="20"
          x2="980"
          y1="170"
          y2="170"
        />
        <line
          x1="20"
          x2="980"
          y1="120"
          y2="120"
        />
        <line
          x1="20"
          x2="980"
          y1="70"
          y2="70"
        />
        <line
          x1="20"
          x2="980"
          y1="20"
          y2="20"
        />
      </g>
      <g
        class="ver-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="133"
          x2="133"
          y1="670"
          y2="20"
        />
        <line
          x1="698"
          x2="698"
          y1="670"
          y2="20"
        />
      </g>
      <g
        class="ver-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="20"
          y1="670"
          y2="20"
        />
        <line
          x1="133"
          x2="133"
          y1="670"
          y2="20"
        />
        <line
          x1="246"
          x2="246"
          y1="670"
          y2="20"
        />
        <line
          x1="359"
          x2="359"
          y1="670"
          y2="20"
        />
        <line
          x1="472"
          x2="472"
          y1="670"
          y2="20"
        />
        <line
          x1="585"
          x2="585"
          y1="670"
          y2="20"
        />
        <line
          x1="698"
          x2="698"
          y1="670"
          y2="20"
        />
        <line
          x1="811"
          x2="811"
          y1="670"
          y2="20"
        />
        <line
          x1="924"
          x2="924"
          y1="670"
          y2="20"
        />
      </g>
    </g>
    <g
      class="axes"
      color="currentColor"
    >
      <g
        class="horAxis"
        color="currentColor"
        fill="currentColor"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="middle"
        transform="translate(0, 670)"
      >
        <path
          class="domain"
          d="M20.5,5V0.5H980.5V5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(20.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            -1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(133.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(246.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(359.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(472.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            3
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(585.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(698.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(811.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(924.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            7
          </text>
        </g>
      </g>
      <g
        class="verAxis"
        color="currentColor"
        fill="currentColor"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="end"
        transform="translate(133, 0)"
      >
        <path
          class="domain"
          d="M-5,670.5H0.5V20.5H-5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,670.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,620.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,570.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,520.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,470.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,420.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            12
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,370.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            14
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,320.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            16
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,270.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            18
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,220.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,170.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            22
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            24
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,70.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            26
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,20.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            28
          </text>
        </g>
      </g>
    </g>
    <g
      class="title"
    >
      <text />
    </g>
    <g
      class="series"
    >
      <g
        class="series0"
        style="color: rgb(27, 158, 119);"
      >
        <g
          class="area"
          fill="currentColor"
          fill-opacity="0.5"
          stroke="#fff"
          stroke-dasharray=""
          stroke-opacity="1"
          stroke-width="0"
        >
          <path />
        </g>
        <g
          class="line"
          fill-opacity="0"
          stroke="currentColor"
          stroke-dasharray=""
          stroke-opacity="1"
          stroke-width="5"
        >
          <path
            d="M20,345C20,345,89.36288309591987,699.0490089746166,156,670C232.93577464850623,636.461514062042,331.88450681961916,61.791107944767866,472,20C608.3807035012834,-20.677162619469403,980,395,980,395"
          />
        </g>
        <g
          class="markers"
          fill="currentColor"
          fill-opacity="0.75"
          stroke="currentColor"
          stroke-dasharray=""
          stroke-opacity="1"
          stroke-width="4"
        >
          <circle
            cx="20"
            cy="345"
            r="10"
          />
          <circle
            cx="156"
            cy="670"
            r="15"
          />
          <circle
            cx="472"
            cy="20"
            r="20"
          />
          <circle
            cx="980"
            cy="395"
            r="5"
          />
        </g>
      </g>
    </g>
  </svg>
  <svg
    class="baseSVG"
    height="100%"
    preserveAspectRatio="xMinYMin meet"
    viewBox="0 0 1000 700"
    width="100%"
  >
    <g
      class="canvas"
    >
      <rect
        class="graphArea"
        fill="#fff"
        fill-opacity="1"
        height="700"
        rx="0"
        ry="0"
        stroke="#00c"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
        width="1000"
      />
    </g>
    <g
      class="grids"
    >
      <g
        class="hor-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="345"
          y2="345"
        />
      </g>
      <g
        class="hor-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="345"
          y2="345"
        />
      </g>
      <g
        class="ver-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="133"
          x2="133"
          y1="670"
          y2="20"
        />
        <line
          x1="698"
          x2="698"
          y1="670"
          y2="20"
        />
      </g>
      <g
        class="ver-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="20"
          y1="670"
          y2="20"
        />
        <line
          x1="133"
          x2="133"
          y1="670"
          y2="20"
        />
        <line
          x1="246"
          x2="246"
          y1="670"
          y2="20"
        />
        <line
          x1="359"
          x2="359"
          y1="670"
          y2="20"
        />
        <line
          x1="472"
          x2="472"
          y1="670"
          y2="20"
        />
        <line
          x1="585"
          x2="585"
          y1="670"
          y2="20"
        />
        <line
          x1="698"
          x2="698"
          y1="670"
          y2="20"
        />
        <line
          x1="811"
          x2="811"
          y1="670"
          y2="20"
        />
        <line
          x1="924"
          x2="924"
          y1="670"
          y2="20"
        />
      </g>
    </g>
    <g
      class="axes"
      color="currentColor"
    >
      <g
        class="horAxis"
        color="currentColor"
        fill="currentColor"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="middle"
        transform="translate(0, 345)"
      >
        <path
          class="domain"
          d="M20.5,5V0.5H980.5V5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(20.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            -1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(133.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(246.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(359.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(472.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            3
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(585.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(698.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(811.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(924.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            7
          </text>
        </g>
      </g>
      <g
        class="verAxis"
        color="currentColor"
        fill="currentColor"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="end"
        transform="translate(133, 0)"
      >
        <path
          class="domain"
          d="M-5,670.5H0.5V20.5H-5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,345.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            10
          </text>
        </g>
      </g>
    </g>
    <g
      class="title"
    >
      <text />
    </g>
    <g
      class="series"
    >
      <g
        class="series0"
        style="color: rgb(27, 158, 119);"
      >
        <g
          class="area"
          fill="currentColor"
          fill-opacity="0.5"
          stroke="#fff"
          stroke-dasharray=""
          stroke-opacity="1"
          stroke-width="0"
        >
          <path />
        </g>
        <g
          class="line"
          fill-opacity="0"
          stroke="currentColor"
          stroke-dasharray=""
          stroke-opacity="1"
          stroke-width="5"
        >
          <path
            d="M20,345C20,345,90.67477497655099,344.99999999999994,156,345C233.3233300358553,345,343.4899600873148,345,472,345C613.3098334101694,345,980,345,980,345"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Line plot data should plot line 1`] = `
<div
  style="width: 300px; height: 300px;"
>
  <svg
    class="baseSVG"
    height="100%"
    preserveAspectRatio="xMinYMin meet"
    viewBox="0 0 1000 700"
    width="100%"
  >
    <g
      class="canvas"
    >
      <rect
        class="graphArea"
        fill="#fff"
        fill-opacity="1"
        height="700"
        rx="0"
        ry="0"
        stroke="#00c"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
        width="1000"
      />
    </g>
    <g
      class="grids"
    >
      <g
        class="hor-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="470"
          y2="470"
        />
        <line
          x1="20"
          x2="980"
          y1="220"
          y2="220"
        />
      </g>
      <g
        class="hor-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="980"
          y1="670"
          y2="670"
        />
        <line
          x1="20"
          x2="980"
          y1="620"
          y2="620"
        />
        <line
          x1="20"
          x2="980"
          y1="570"
          y2="570"
        />
        <line
          x1="20"
          x2="980"
          y1="520"
          y2="520"
        />
        <line
          x1="20"
          x2="980"
          y1="470"
          y2="470"
        />
        <line
          x1="20"
          x2="980"
          y1="420"
          y2="420"
        />
        <line
          x1="20"
          x2="980"
          y1="370"
          y2="370"
        />
        <line
          x1="20"
          x2="980"
          y1="320"
          y2="320"
        />
        <line
          x1="20"
          x2="980"
          y1="270"
          y2="270"
        />
        <line
          x1="20"
          x2="980"
          y1="220"
          y2="220"
        />
        <line
          x1="20"
          x2="980"
          y1="170"
          y2="170"
        />
        <line
          x1="20"
          x2="980"
          y1="120"
          y2="120"
        />
        <line
          x1="20"
          x2="980"
          y1="70"
          y2="70"
        />
        <line
          x1="20"
          x2="980"
          y1="20"
          y2="20"
        />
      </g>
      <g
        class="ver-major-Grid"
        fill-opacity="0"
        stroke="#444"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="133"
          x2="133"
          y1="670"
          y2="20"
        />
        <line
          x1="698"
          x2="698"
          y1="670"
          y2="20"
        />
      </g>
      <g
        class="ver-minor-Grid"
        fill-opacity="0"
        stroke="#eee"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
      >
        <line
          x1="20"
          x2="20"
          y1="670"
          y2="20"
        />
        <line
          x1="133"
          x2="133"
          y1="670"
          y2="20"
        />
        <line
          x1="246"
          x2="246"
          y1="670"
          y2="20"
        />
        <line
          x1="359"
          x2="359"
          y1="670"
          y2="20"
        />
        <line
          x1="472"
          x2="472"
          y1="670"
          y2="20"
        />
        <line
          x1="585"
          x2="585"
          y1="670"
          y2="20"
        />
        <line
          x1="698"
          x2="698"
          y1="670"
          y2="20"
        />
        <line
          x1="811"
          x2="811"
          y1="670"
          y2="20"
        />
        <line
          x1="924"
          x2="924"
          y1="670"
          y2="20"
        />
      </g>
    </g>
    <g
      class="axes"
      color="currentColor"
    >
      <g
        class="horAxis"
        color="currentColor"
        fill="currentColor"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="middle"
        transform="translate(0, 670)"
      >
        <path
          class="domain"
          d="M20.5,5V0.5H980.5V5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(20.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            -1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(133.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            0
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(246.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            1
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(359.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(472.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            3
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(585.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(698.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            5
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(811.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(924.5,0)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            y2="5"
          />
          <text
            dy="0.71em"
            fill="currentColor"
            y="8"
          >
            7
          </text>
        </g>
      </g>
      <g
        class="verAxis"
        color="currentColor"
        fill="currentColor"
        fill-opacity="0"
        font-family="sans-serif"
        font-size="16px"
        font-style="normal"
        font-weight="100"
        stroke="currentColor"
        stroke-dasharray=""
        stroke-opacity="1"
        stroke-width="1"
        text-anchor="end"
        transform="translate(133, 0)"
      >
        <path
          class="domain"
          d="M-5,670.5H0.5V20.5H-5"
          stroke="currentColor"
        />
        <g
          class="tick"
          opacity="1"
          transform="translate(0,670.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            2
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,620.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            4
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,570.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            6
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,520.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            8
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,470.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            10
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,420.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            12
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,370.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            14
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,320.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            16
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,270.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            18
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,220.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            20
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,170.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            22
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,120.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            24
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,70.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            26
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,20.5)"
        >
          <line
            fill-opacity="0"
            stroke="currentColor"
            stroke-dasharray=""
            stroke-opacity="1"
            stroke-width="2"
            x2="-5"
          />
          <text
            dy="0.32em"
            fill="currentColor"
            x="-8"
          >
            28
          </text>
        </g>
      </g>
    </g>
    <g
      class="title"
    >
      <text />
    </g>
    <g
      class="series"
    >
      <g
        class="series0"
        style="color: rgb(27, 158, 119);"
      >
        <g
          class="area"
          fill="currentColor"
          fill-opacity="0.5"
          stroke="#fff"
          stroke-dasharray=""
          stroke-opacity="1"
          stroke-width="0"
        >
          <path />
        </g>
        <g
          class="line"
          fill-opacity="0"
          stroke="currentColor"
          stroke-dasharray=""
          stroke-opacity="1"
          stroke-width="5"
        >
          <path
            d="M20,345C20,345,89.36288309591987,699.0490089746166,156,670C232.93577464850623,636.461514062042,331.88450681961916,61.791107944767866,472,20C608.3807035012834,-20.677162619469403,980,395,980,395"
          />
        </g>
        <g
          class="markers"
          fill="currentColor"
          fill-opacity="0.75"
          stroke="currentColor"
          stroke-dasharray=""
          stroke-opacity="1"
          stroke-width="4"
        >
          <circle
            cx="20"
            cy="345"
            r="10"
          />
          <circle
            cx="156"
            cy="670"
            r="15"
          />
          <circle
            cx="472"
            cy="20"
            r="20"
          />
          <circle
            cx="980"
            cy="395"
            r="5"
          />
        </g>
      </g>
    </g>
  </svg>
</div>
`;
